@@ -1,5 +1,10 @@
 2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
+	* src/MMapArea.py
+	Fix critical bug and use default system font.
+
+2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
 	* src/MainWindow.py
 	* src/MMapArea.py
 	* data/labyrinth-ui.xml
